--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,31 +1,23 @@
 [package]
-name = "rust-sandbox"
+name = "tutorial1-window"
 version = "0.1.0"
-authors = ["Doug Milford"]
+authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
 edition = "2018"
 
-[lib]
-crate-type = ["cdylib"]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+
+[[bin]]
+name = "tutorial1-window"
+path = "src/main.rs"
 
 [dependencies]
-console_error_panic_hook = "=0.1.5"
-js-sys = "0.3.19"
-lazy_static = "1.3.0"
-nalgebra = "0.18.0"
-wasm-bindgen = "0.2.44"
+image = "0.22"
+winit = "0.20"
+shaderc = "0.6"
+cgmath = "0.17"
+futures = "0.3.4"
 
-[dependencies.web-sys]
-version = "0.3.4"
-features = [
-    'Document',
-    'Element',
-    'EventTarget',
-    'HtmlCanvasElement',
-    'MouseEvent',
-    'WebGlBuffer',
-    'WebGlProgram',
-    'WebGlRenderingContext',
-    'WebGlShader',
-    'WebGlUniformLocation',
-    'Window',
-]
+[dependencies.wgpu]
+version = "0.5.0"
+features =["vulkan"]
