--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,5 @@ winit = "0.20"
 shaderc = "0.6"
 cgmath = "0.17"
 futures = "0.3.4"
-
-[dependencies.wgpu]
-version = "0.5.0"
-features =["vulkan"]
+#wgpu = "0.5.0"
+wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
