--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,12 @@
 [package]
-name = "tutorial1-window"
+name = "rust-sandbox"
 version = "0.1.0"
-authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
+authors = ["Marco Giordano <marco.giordano.work@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 
-[[bin]]
-name = "tutorial1-window"
-path = "src/main.rs"
 
 [dependencies]
 image = "0.22"
