--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -17,8 +17,11 @@ jobs:
         with:
           command: check
   build:
-    name: Build 
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu, macos]
+    name: ${{matrix.os}}
+    runs-on: ${{matrix.os}}-latest§ 
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
