--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ futures = "0.3.5"
 wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
 #needed for requiring platform web
 winit = { version = "0.22.1", features = ["web-sys"] }
+shaderc = "0.6"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.62"
