--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -7,6 +7,7 @@ jobs:
     name: Check
     runs-on: ubuntu-latest
     steps:
+      - uses: seanmiddleditch/gha-setup-ninja@master
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
@@ -27,6 +28,7 @@ jobs:
         with:
           python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+      - uses: seanmiddleditch/gha-setup-ninja@master  
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
@@ -41,6 +43,7 @@ jobs:
     name: Test Suite
     runs-on: ubuntu-latest
     steps:
+      - uses: seanmiddleditch/gha-setup-ninja@master
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
@@ -54,6 +57,7 @@ jobs:
     name: Clippy
     runs-on: ubuntu-latest
     steps:
+      - uses: seanmiddleditch/gha-setup-ninja@master
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
