--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -29,7 +29,8 @@ jobs:
         with:
           python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-      - run: choco install ninja  
+      - uses: crazy-max/ghaction-chocolatey@v1.2.2
+      - run: choco install ninja
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
@@ -45,7 +46,8 @@ jobs:
     name: Test Suite
     runs-on: ubuntu-latest
     steps:
-      - uses: seanmiddleditch/gha-setup-ninja@master
+      - uses: crazy-max/ghaction-chocolatey@v1.2.2
+      - run: choco install ninja
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
@@ -59,6 +61,7 @@ jobs:
     name: Clippy
     runs-on: ubuntu-latest
     steps:
+      - uses: crazy-max/ghaction-chocolatey@v1.2.2
       - run: choco install ninja  
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
