--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -30,6 +30,8 @@ jobs:
           python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
       - uses: crazy-max/ghaction-chocolatey@v1.2.2
+        with:
+          args: -h
       - run: choco install ninja
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
