--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -45,8 +45,8 @@ jobs:
     name: Test Suite
     runs-on: ubuntu-latest
     steps:
-      - uses: seanmiddleditch/gha-setup-ninja@v1
       - uses: actions/checkout@v2
+      - uses: Symbitic/install-cmake@v0.1.0
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
