--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -25,11 +25,12 @@ jobs:
     runs-on: ${{matrix.os}}-latest      
   
     steps:
+      - name:
+        - uses: seanmiddleditch/gha-setup-ninja@v1
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-      - uses: seanmiddleditch/gha-setup-ninja@v1
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
@@ -39,7 +40,6 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: build 
-          
 
   test:
     name: Test Suite
