--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -25,8 +25,8 @@ jobs:
     runs-on: ${{matrix.os}}-latest      
   
     steps:
-      - name:
-        - uses: seanmiddleditch/gha-setup-ninja@v1
+      - name: setup ninja
+        uses: seanmiddleditch/gha-setup-ninja@v1
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
