--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,14 +13,14 @@ image = "0.23.4"
 cgmath = "0.17"
 futures = "0.3.5"
 #wgpu = "0.5.0"
-wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
+wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev="89ee5bffd3c37279f733b76b05e5d030aba035db"  }
 #needed for requiring platform web
 winit = { version = "0.22.2", features = ["web-sys"] }
 rand = { version = "0.7.3", features = ["wasm-bindgen"] }
 bytemuck = "1.2.0"
 
-#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-#shaderc = "0.6"
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+shaderc = "0.6"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.62"
