--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev="89ee5bffd3c37279f733b76
 winit = { version = "0.22.2", features = ["web-sys"] }
 rand = { version = "0.7.3", features = ["wasm-bindgen"] }
 bytemuck = "1.2.0"
+async-trait = "0.1.35"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 shaderc = "0.6"
