--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ winit = { version = "0.22.2", features = ["web-sys"] }
 rand = { version = "0.7.3", features = ["wasm-bindgen"] }
 bytemuck = "1.2.0"
 async-trait = "0.1.35"
+serde_json = "1.0.55"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 shaderc = "0.6"
