--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ rand = { version = "0.7.3", features = ["wasm-bindgen"] }
 bytemuck = "1.2.0"
 async-trait = "0.1.35"
 serde_json = "1.0.55"
+gltf = "0.15.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 shaderc = "0.6"
