--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ bytemuck = "1.2.0"
 async-trait = "0.1.35"
 serde_json = "1.0.55"
 gltf = "0.15.2"
+log = "0.4.0"
+env_logger = "0.7.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 shaderc = "0.6"
