--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,12 @@ serde_json = "1.0.55"
 gltf = "0.15.2"
 log = "0.4.0"
 env_logger = "0.7.1"
+imgui = "0.4"
+
+[dependencies.imgui-winit-support]
+version = "0.4"
+default-features = false
+features = ["winit-22"]
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 shaderc = "0.6"
