--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ serde_json = "1.0.55"
 gltf = "0.15.2"
 log = "0.4.0"
 env_logger = "0.7.1"
-imgui = "0.4"
+imgui = {version = "0.4", features=["wasm"]}
 
 [dependencies.imgui-winit-support]
 version = "0.4"
